--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -197,6 +197,7 @@
      <Compile Include="Assets\Scripts\PP\PP_Turret.cs" />
      <Compile Include="Assets\Scripts\PP\PP_UI.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\AD_Prac.cs" />
+     <Compile Include="Assets\Scripts\Prac_Offense\AI_CatchHandling.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\AN_OffPlayer.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\ATH_Forces.cs" />
      <Compile Include="Assets\Scripts\Prac_Offense\ATH_Manager.cs" />
